Fix search overlap

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -530,7 +530,7 @@ h2.section-header, h3.section-header, h4.section-header, h5.section-header, h6.s
     }
 
     .search {
-        min-width: 50vw;
+        min-width: 38vw;
     }
 }
 
